syntax = "proto3";
package vending;

option go_package = "github.com/ksusonic/alice-coffee/protos/requestpb";

message Request {
  int32 ID = 1;

  oneof Action {
    MakeCoffeeAction MakeCoffee = 2;
  }
}

message MakeCoffeeAction {
  enum CoffeeEnum {
    SIMPLE = 0;
    ESPRESSO = 1;
    AMERICANO = 2;
    CAPPUCCINO = 3;
    LATTE = 4;
    CACAO = 5;
  }

  CoffeeEnum CoffeeType = 1;
  uint32 SugarAmount = 2;
}
